Version 8.17 (Unreleased)
-------------------------
- Added Heroku for release tracking.

Version 8.16
------------

Version 8.15
------------

Version 8.14
------------

Version 8.13
------------

Version 8.12
------------

- Added VictorOps support for alerts.
- Added Segment data forwarding.

Version 8.11
------------

- Improved UI for password and API key fields used in integrations
- Add Asana to issue tracking plugin options
- Add experimental support for GitHub managed repositories

Version 8.10
------------

- Initial release