@@ -14,8 +14,39 @@ class BitbucketClient(object):
 
     def __init__(self, auth):
         self.auth = auth
+        self.token = self.auth.tokens['oauth_token']
+
+    def _request2(self, method, path, data=None, params=None):
+        headers = {
+            'Authorization': 'token %s' % self.token,
+        }
+
+        session = build_session()
+        print(headers)
+        print('{}2.0{}'.format(self.API_URL, path))
+        try:
+            resp = getattr(session, method.lower())(
+                url='{}2.0{}'.format(self.API_URL, path),
+                headers=headers,
+                json=data,
+                params=params,
+                allow_redirects=True,
+            )
+            resp.raise_for_status()
+        except HTTPError as e:
+            raise ApiError.from_response(e.response)
+
+        if resp.status_code == 204:
+            return {}
+
+        return resp.json()
+
+        return self._request(method, path, headers=headers, data=data, params=params)
 
     def request(self, method, version, path, data=None, params=None):
+        if version=='2.0':
+            return self._request2(method,path,data,params)
+
         oauth = OAuth1(unicode(settings.BITBUCKET_CONSUMER_KEY),
                        unicode(settings.BITBUCKET_CONSUMER_SECRET),
                        self.auth.tokens['oauth_token'], self.auth.tokens['oauth_token_secret'],
@@ -72,6 +103,14 @@ class BitbucketClient(object):
         )
 
     # copied from github
+
+    def get_repo(self, repo):
+        return self.request(
+            'GET',
+            '2.0',
+            '/repositories/{}'.format(repo),
+        )
+
     def create_hook(self, repo, data):
         return self.request(
             'POST',
